# nvidia-broadcast-linux

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  build-packages.sh  install.sh  install_macos.sh  pyproject.toml  requirements.txt  setup_deps.sh  test_preview.py  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-packages.yml  snap.yml
configs/pipewire/: nvbroadcast-virtual-mic.conf
configs/v4l2loopback/: blucast.conf
data/: com.doczeus.NVBroadcast.desktop  com.doczeus.NVBroadcast.metainfo.xml  com.doczeus.NVBroadcast.service.in
docs/: BACKGROUND_QUALITY_WORKFLOW.md  CNAME  MACOS_VIRTUAL_CAMERA.md  RELEASE_NOTES_1.0.2.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.1.1.md  RELEASE_NOTES_1.1.2.md  index.html
macos/: LICENSE  build.sh
macos/NVBroadcastExtension/: DeviceSource.swift  ExtensionProvider.swift  Info.plist  NVBroadcastExtension.entitlements  StreamSource.swift  main.swift
scripts/: analyze_training_bundle.py  capture_quality_dataset.py  combine_quality_datasets.py  eval_background_dataset.py  eval_background_quality.py  install_maxine.sh  prepare_matting_training_bundle.py  release_smoke.py  setup_v4l2loopback.sh  sweep_background_models.py  sweep_background_modes.py  train_edge_refiner.py
snap/: snapcraft.yaml
tests/: test_arch_support.py  test_audio_devices.py  test_audio_pipeline.py  test_auto_capture_tuning.py  test_background_overlay.py  test_beautify.py  test_camera_modes.py  test_config_persistence.py  test_dependency_installer.py  test_eye_contact.py  test_integration.py  test_meeting_store.py  test_mic_test.py  test_packaging_metadata.py  test_perf_monitor.py  test_relighting.py  test_resources.py  test_speaker_monitor.py  test_summarizer.py  test_tensorrt_rvm.py  test_training_bundle.py  test_transcriber.py  test_updates.py  test_video_pipeline.py  test_virtual_mic.py  test_voice_fx.py
(+51 files in other folders)
